Wed Dec 17 18:00:15 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* inits.c (rb_vm_call_inits): no longer passes current vm.

Sun Nov 30 15:26:44 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* inits.c (rb_vm_call_inits): let all InitVM functions use
	  ruby_vm_t instead of rb_vm_t.

Fri Nov  7 20:42:47 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (Init_sym):  symbol objectspace should not be GCed.

Tue Sep 16 05:04:56 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_thread_specific): check if no warnings.

Tue Sep  9 01:52:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (Init_IO): max_file_descriptor_lock is per-process resource.

Tue Sep  9 00:55:34 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (ruby_vm_init): split from ruby_init.

	* eval.c (ruby_vm_run): cleans up VM always.

	* inits.c (rb_call_inits): separated per-process and per-VM
	  intializations.

	* parse.y (sym_str_new): creates VM-neutral string.

	* vm_core.h (struct rb_vm_struct): includes method cache.

	* vm.c (vm_init2): initializes method cache.

	* vm_eval.c, vm_method.c: use method cache in VM.

	* mvm.c (specific_key): must be initialized.

Tue Sep  9 00:30:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (st_init_table_with_size, ADD_DIRECT): fixed typo.

Mon Sep  8 20:10:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (power_cache_get_power0): no need to register address.

Mon Sep  8 17:26:51 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (garbage_collect): checks if memory can be reclaimed.

Mon Sep  8 06:38:22 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_check_trap_pending): fix for MVM.

	* thread.c (rb_queue_empty_p): added.

	* vm_core.h (rb_thread_set_current_raw): fixed typo.

Wed Sep  3 10:17:55 2008  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/mvm.h, include/ruby/ruby.h, main.c: 
	  main.c doesn't need "ruby.h" any more.
